# DeepGen

./: .env.example  .gitignore  CLAUDE.md  DeepGen.spec  README.md  alembic.ini  pyproject.toml
.github/workflows/: macos-release.yml
alembic/: env.py
alembic/versions/: 20260215_0001_research_v2.py  20260215_0002_indexed_documents.py  20260215_0003_research_questions.py
deepgen/: __init__.py  config.py  db.py  mac_app.py  main.py  models.py  schemas.py  version.py
deepgen/routers/: config_router.py  research_router.py  sessions_router.py
deepgen/services/: connectors.py  document_index.py  faces.py  gedcom.py  keychain.py  llm.py  local_files.py  ocr.py  provider_config.py  research.py  source_types.py  startup_checks.py  updater.py
deepgen/services/research_pipeline/: __init__.py  apply.py  backend_adapters.py  contradictions.py  extraction.py  jobs.py  retrieval.py  (+1 more)
deepgen/static/: app.js  styles.css
deepgen/templates/: index.html
docs/: SPRINT_MANAGEMENT.md
docs/releases/: INTERNAL_BETA_SPRINT1.md  STEP1_RELEASE_RUNBOOK.md
releases/test/: appcast.json
scripts/release/: build_macos_app.sh  generate_update_feed.py  github_release_preflight.sh  notarize_macos.sh  smoke_test_macos_artifact.sh
tests/: test_connectors.py  test_document_index.py  test_gedcom.py  test_llm.py  test_local_files.py  test_provider_config_keychain.py  test_research_pipeline_apply.py  test_research_pipeline_contradictions_scoring.py  test_research_pipeline_extraction.py  test_research_pipeline_jobs.py  test_sessions_people.py  test_startup_checks.py  test_updater.py
