[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepgen"
version = "0.1.0"
description = "Cloud-first genealogy research agent scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "openai>=1.40.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]
ocr = [
  "pillow>=10.0.0",
  "pytesseract>=0.3.10",
]
mlx = [
  "mlx-lm>=0.16.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools]
packages = ["deepgen", "deepgen.routers", "deepgen.services"]
